# ae_smoothlife

./: .directory  CMakeLists.txt  CMakeLists.txt.user.1eefb8e  CMakeLists.txt.user.916b3e8  README.md  ae_smoothlife.kdev4  aligned_vector.h  build_xen.sh  catch.hpp  communication.h  concept_mpi.txt  gui.cpp  gui.h  gui_color.h  gui_space_renderer.cpp  gui_space_renderer.h  main.cpp  matrix.h  matrix_buffer.h  matrix_buffer_queue.h  mpi_async_connection.h  mpi_connection.h  mpi_dual_connection.h  mpi_manager.h  mpi_variable_buffer_connection.h  ogl_gui.cpp  ogl_gui.h  ogl_shader.cpp  ogl_shader.h  ogl_shader_variable.h  ogl_texture.cpp  ogl_texture.h  render_buffer.h  ruleset.cpp  ruleset.h  sdl_gui.cpp  sdl_gui.h  simulator.cpp  simulator.h  space_info.h  (+5 more)
.kdev4/: ae_smoothlife.kdev4
shaders/: blue.fsh  grayscale.fsh  grayscale.vsh  microscope.fsh  microscope.vsh  microscope2.fsh
